# iai_cad_tools

./: README.md
iai_cad_downloader/: CMakeLists.txt  package.xml
iai_cad_downloader/scripts/: download-cad-models.py
